<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCorreo">

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/tvCorreo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDestinatario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAsunto"
        android:layout_width="335dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hintAsunto"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextCuerpo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDestinatario" />

    <EditText
        android:id="@+id/editTextCuerpo"
        android:layout_width="335dp"
        android:layout_height="153dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hintTexto"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAsunto" />

    <EditText
        android:id="@+id/editTextDestinatario"
        android:layout_width="335dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hintDestinatario"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextAsunto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCorreo" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="220dp"
        android:onClick="enviarCorreo"
        android:text="@string/btnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCuerpo" />


</androidx.constraintlayout.widget.ConstraintLayout>